--- a/mobile/sentiremobile/app/src/main/AndroidManifest.xml
+++ b/mobile/sentiremobile/app/src/main/AndroidManifest.xml
@@ -2,7 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="biz.lightwell.sentiremobile">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+
+    <uses-feature
+        android:name="android.hardware.bluetooth_le"
+        android:required="true"/>
+    <uses-feature android:name="android.hardware.location.gps"/>
+
     <application
+        android:name="com.orm.SugarApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -15,6 +25,18 @@
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+
+        <meta-data
+            android:name="DATABASE"
+            android:value="lightWellSantire.db"/>
+        <meta-data
+            android:name="QUERY_LOG"
+            android:value="false"/>
+
+        <activity android:name=".sensorMgmt.SensorManagementActivity">
+        </activity>
+        <activity android:name=".aaa.GoogleAuthActivity">
         </activity>
     </application>
 
