Updated BLE for two sensors
This one is  better;
SENSORS- has two services enabled (MQ2 and TEMPERATURE) with a slightly
better code structure.
MOBILE- has a better, but hardcoded, approach to start/stop services and
polling for data.

--- a/mobile/sentiremobile/app/src/main/AndroidManifest.xml
+++ b/mobile/sentiremobile/app/src/main/AndroidManifest.xml
@@ -34,9 +34,11 @@
             android:name="QUERY_LOG"
             android:value="false"/>
 
-        <activity android:name=".sensorMgmt.SensorManagementActivity">
+        <activity android:name=".sensorMgmt.zzzSensorManagementActivity">
         </activity>
         <activity android:name=".aaa.GoogleAuthActivity">
+        </activity>
+        <activity android:name=".sensorMgmt.SensorMgmtActivity">
         </activity>
     </application>
 
