--- a/mobile/sentiremobile/app/build.gradle
+++ b/mobile/sentiremobile/app/build.gradle
@@ -26,6 +26,8 @@ dependencies {
     })
     compile 'com.github.satyan:sugar:1.5'
     compile 'com.android.support:appcompat-v7:25.3.0'
+    compile 'com.google.android.gms:play-services-auth:10.2.1'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
 }
